feat: activity inbox
